objects/vlocity_cmt__AccountDiscountPricing__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__AccountDiscountId__c</fullName>
        <label>Account Discount</label>
        <referenceTo>vlocity_cmt__AccountDiscount__c</referenceTo>
        <relationshipLabel>Account Discount Pricing</relationshipLabel>
        <relationshipName>AccountDiscountPricing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdjustmentValue__c</fullName>
        <label>Adjustment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingVariableId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Variable</label>
        <referenceTo>vlocity_cmt__PricingVariable__c</referenceTo>
        <relationshipLabel>Account Discount Pricing</relationshipLabel>
        <relationshipName>AccountDiscountPricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimePlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Plan</label>
        <referenceTo>vlocity_cmt__TimePlan__c</referenceTo>
        <relationshipLabel>Account Discount Pricing</relationshipLabel>
        <relationshipName>AccountDiscountPricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimePolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Policy</label>
        <referenceTo>vlocity_cmt__TimePolicy__c</referenceTo>
        <relationshipLabel>Account Discount Pricing</relationshipLabel>
        <relationshipName>AccountDiscountPricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Discount Pricing</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Discount Pricing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>